# Epipay

./: .gitignore  CMakeLists.txt  Makefile  README.md  epipay
API/: app.js  package.json
API/config/: peopleRules.js  stocksRules.js
API/models/: books.js  genres.js  log.js  people.js  stocks.js
API/route/: people.js  stocks.js
AppliMobile/EpiPay/: local.properties
AppliMobile/EpiPay/app/: build.gradle
AppliMobile/EpiPay/app/src/androidTest/java/com/EpiPay/: ExampleInstrumentedTest.java
AppliMobile/EpiPay/app/src/main/: AndroidManifest.xml
AppliMobile/EpiPay/app/src/main/java/com/EpiPay/: Gestion.java  LoginActivity.java  MenuActivity.java  MenuAdapter.java  Menu_list.java  Paiement.java  Product.java  ProductAdapter.java  (+1 more)
AppliMobile/EpiPay/app/src/main/res/layout/: activity_gestion.xml  activity_login.xml  activity_menu.xml  activity_paiement.xml  activity_scan.xml  content_paiement.xml  listview_header_row.xml  listviewitem.xml
AppliMobile/EpiPay/app/src/main/res/values/: strings.xml
AppliMobile/EpiPay/gradle/wrapper/: gradle-wrapper.properties
NFC_Driver/: libacsccid1_1.1.4-1~bpo8+1_armhf.deb  libacsccid1_1.1.4-1~ubuntu16.04.1_amd64.deb  libacsccid1_1.1.4-1~ubuntu16.04.1_i386.deb
include/: AccountInfo.hh  ActionButton.hh  IKey.hh  IKey.hpp  Key.hh  Key.hpp  Keyboard.hh  NfcReader.hh  RegisterUi.hh  TileType.hh  Ui.hh  api.hh  keypad.hh  net.hh  net.hpp  ui.hh
src/: AccountInfo.cpp  ActionButton.cpp  ActionButton.hpp  Key.cpp  Keyboard.cpp  NfcReader.cpp  RegisterUi.cpp  RegisterUi.hh  Ui.cpp  api.cpp  keypad.cpp  main.cpp  ui.cpp
(+1 files in other folders)
